kubernetes-labs/lab-32-istio-traffic-mirroring/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab-32-mirroring
  labels:
    istio-injection: enabled
